[package]
name = "duraflow-rs"
version = "1.0.0"
edition = "2021"
# Minimum supported Rust version (MSRV)
rust-version = "1.81"
# Crate metadata (helpful for crates.io and docs.rs)
description = "Durable, resumable DAG tasks built on top of dagx"
repository = "https://github.com/dougcooper/duraflow-rs"
documentation = "https://docs.rs/duraflow-rs"
homepage = "https://github.com/dougcooper/duraflow-rs"

[dependencies]
dagx = "0.3.1"
futures = "0.3.32"
parking_lot = "0.12.5"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
